testdata/errors/typo_restricted.ral
config { }

register foo: 32 { a: 32 }

resticted foo bar
